--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -1,4 +1,4 @@
-name: Build Mobile Apps
+name: Build Mobile Apps with EAS
 
 on:
   workflow_dispatch:
@@ -15,25 +15,20 @@ on:
         options:
           - android
           - ios
-          - both
-        default: 'both'
-      build_type:
-        description: 'Build type'
+          - all
+        default: 'all'
+      profile:
+        description: 'Build profile'
         required: true
         type: choice
         options:
-          - release
-          - debug
-        default: 'release'
-      force_clean:
-        description: 'Force clean prebuild (slower but ensures fresh native code)'
-        required: false
-        type: boolean
-        default: false
+          - preview
+          - production
+        default: 'preview'
 
 jobs:
-  build-android:
-    if: ${{ github.event.inputs.platform == 'android' || github.event.inputs.platform == 'both' }}
+  build:
+    name: EAS Build
     runs-on: ubuntu-latest
     
     steps:
@@ -43,389 +38,53 @@ jobs:
           repository: 'Greatify/SalesX'
           ref: ${{ github.event.inputs.branch }}
           token: ${{ secrets.PAT_TOKEN }}
-          fetch-depth: 0
       
-      - name: 🔐 Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      
-      - name: 🔑 Fetch secrets from AWS Secrets Manager
-        id: fetch-secrets
-        working-directory: mobile
-        run: |
-          echo "Fetching mobile app secrets from AWS Secrets Manager..."
-          aws secretsmanager get-secret-value \
-            --secret-id salesx-mobile-prod \
-            --query SecretString \
-            --output text > .env
-          
-          echo "✅ Secrets fetched and saved to .env"
-          echo "📋 Environment variables loaded (content hidden for security)"
-      
-      - name: 📱 Setup Node.js with npm cache
+      - name: 📱 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: mobile/package-lock.json
       
-      - name: ☕ Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      
-      - name: 🤖 Setup Android SDK
-        uses: android-actions/setup-android@v3
-      
-      - name: 💾 Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: mobile/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('mobile/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-      
-      - name: 💾 Cache Android native folder
-        uses: actions/cache@v4
-        with:
-          path: mobile/android
-          key: ${{ runner.os }}-android-${{ hashFiles('mobile/package.json', 'mobile/app.json', 'mobile/app.config.js') }}
-          restore-keys: |
-            ${{ runner.os }}-android-
-      
-      - name: ⚙️ Setup Gradle with build cache
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: ${{ github.ref != 'refs/heads/main' }}
-      
       - name: 📦 Install dependencies
         working-directory: mobile
-        run: |
-          if [ ! -d "node_modules" ]; then
-            echo "Installing dependencies (cache miss)..."
-            npm ci --legacy-peer-deps
-          else
-            echo "Using cached node_modules ✅"
-          fi
+        run: npm ci --legacy-peer-deps
       
-      - name: 🔍 Check if native regen needed
-        id: native-check
+      - name: 🔧 Setup Expo and EAS
+        run: |
+          npm install -g eas-cli
+          eas --version
+      
+      - name: 🚀 Build with EAS
         working-directory: mobile
         run: |
-          if [ "${{ github.event.inputs.force_clean }}" == "true" ]; then
-            echo "Force clean requested"
-            echo "needs_clean=true" >> $GITHUB_OUTPUT
-          elif [ ! -d "android" ]; then
-            echo "Android folder doesn't exist, needs generation"
-            echo "needs_clean=true" >> $GITHUB_OUTPUT
-          else
-            # Check if native-affecting files changed
-            if git diff HEAD~1 HEAD --quiet -- package.json app.json app.config.js 2>/dev/null; then
-              echo "No native config changes detected"
-              echo "needs_clean=false" >> $GITHUB_OUTPUT
-            else
-              echo "Native config changes detected"
-              echo "needs_clean=true" >> $GITHUB_OUTPUT
-            fi
-          fi
-      
-      - name: 🔧 Generate Android project (conditional clean)
-        working-directory: mobile
-        run: |
-          if [ "${{ steps.native-check.outputs.needs_clean }}" == "true" ]; then
-            echo "Regenerating native code with --clean..."
-            npx expo prebuild --platform android --clean --non-interactive
-          else
-            echo "Using cached native code, running prebuild without --clean..."
-            npx expo prebuild --platform android --non-interactive || {
-              echo "Prebuild failed, falling back to clean..."
-              npx expo prebuild --platform android --clean --non-interactive
-            }
-          fi
-      
-      - name: ⚡ Enable Gradle optimizations
-        working-directory: mobile/android
-        run: |
-          cat >> gradle.properties << EOF
-          org.gradle.caching=true
-          org.gradle.parallel=true
-          org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
-          android.enableJetifier=true
-          android.useAndroidX=true
-          EOF
-      
-      - name: 🏗️ Build Android APK with cache
-        working-directory: mobile/android
-        run: |
-          if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
-            ./gradlew assembleRelease --build-cache --parallel
-          else
-            ./gradlew assembleDebug --build-cache --parallel
-          fi
-      
-      - name: 🔐 Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          aws-access-key-id: ${{ secrets.S3_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.S3_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      
-      - name: 📤 Upload APK to S3
-        run: |
-          # Get app version
-          VERSION=$(node -p "require('./app.json').expo.version")
-          
-          # Find APK file and set S3 path (always "latest" - S3 versioning handles history)
-          if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
-            APK_FILE=$(find android/app/build/outputs/apk/release -name "*.apk" | head -n 1)
-            S3_KEY="mobile/android/release/SalesX-latest.apk"
-          else
-            APK_FILE=$(find android/app/build/outputs/apk/debug -name "*.apk" | head -n 1)
-            S3_KEY="mobile/android/debug/SalesX-latest.apk"
-          fi
-          
-          # Upload to S3 (overwrites previous - S3 versioning keeps history)
-          aws s3 cp "$APK_FILE" "s3://salesx-greatify/$S3_KEY"
-          
-          # Generate CloudFront URL
-          S3_CLOUDFRONT_URL="${{ secrets.S3_CLOUDFRONT_URL }}/$S3_KEY"
-          
-          echo "APK_VERSION=$VERSION" >> $GITHUB_ENV
-          echo "APK_S3_KEY=$S3_KEY" >> $GITHUB_ENV
-          echo "APK_DOWNLOAD_URL=$S3_CLOUDFRONT_URL" >> $GITHUB_ENV
-        working-directory: mobile
+          eas build \
+            --platform ${{ github.event.inputs.platform }} \
+            --profile ${{ github.event.inputs.profile }} \
+            --non-interactive \
+            --no-wait
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
       
       - name: 📋 Build Summary
         run: |
-          echo "### 🤖 Android Build Complete! ✅" >> $GITHUB_STEP_SUMMARY
+          echo "### 🚀 EAS Build Started! ✅" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Version:** ${{ env.APK_VERSION }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Build Type:** ${{ github.event.inputs.build_type }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Platform:** ${{ github.event.inputs.platform }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Profile:** ${{ github.event.inputs.profile }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📥 Download APK" >> $GITHUB_STEP_SUMMARY
+          echo "### 📱 Build Progress" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Direct Download Link:**" >> $GITHUB_STEP_SUMMARY
-          echo "${{ env.APK_DOWNLOAD_URL }}" >> $GITHUB_STEP_SUMMARY
+          echo "Check build status at:" >> $GITHUB_STEP_SUMMARY
+          echo "https://expo.dev/accounts/greatifydev/projects/salesx/builds" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**S3 Location:** \`${{ env.APK_S3_KEY }}\`" >> $GITHUB_STEP_SUMMARY
-
-  build-ios:
-    if: ${{ github.event.inputs.platform == 'ios' || github.event.inputs.platform == 'both' }}
-    runs-on: macos-latest
-    timeout-minutes: 60
-    
-    steps:
-      - name: 📥 Checkout SalesX source code
-        uses: actions/checkout@v4
-        with:
-          repository: 'Greatify/SalesX'
-          ref: ${{ github.event.inputs.branch }}
-          token: ${{ secrets.PAT_TOKEN }}
-          fetch-depth: 0
-      
-      - name: 📱 Setup Node.js with npm cache
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: mobile/package-lock.json
-      
-      - name: 🍎 Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: 'latest-stable'
-      
-      - name: 💎 Setup Ruby (for CocoaPods)
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2'
-          bundler-cache: true
-      
-      - name: 💾 Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: mobile/node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('mobile/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-modules-
-      
-      - name: 💾 Cache iOS native folder
-        uses: actions/cache@v4
-        with:
-          path: mobile/ios
-          key: ${{ runner.os }}-ios-${{ hashFiles('mobile/package.json', 'mobile/app.json', 'mobile/app.config.js') }}
-          restore-keys: |
-            ${{ runner.os }}-ios-
-      
-      - name: 💾 Cache CocoaPods
-        uses: actions/cache@v4
-        with:
-          path: |
-            mobile/ios/Pods
-            ~/Library/Caches/CocoaPods
-            ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('mobile/ios/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-      
-      - name: 💾 Cache iOS build folder
-        uses: actions/cache@v4
-        with:
-          path: mobile/ios/build
-          key: ${{ runner.os }}-ios-build-${{ hashFiles('mobile/ios/Podfile.lock', 'mobile/package.json', 'mobile/ios/**/*.swift', 'mobile/ios/**/*.m', 'mobile/ios/**/*.h') }}
-          restore-keys: |
-            ${{ runner.os }}-ios-build-
-      
-      - name: 📦 Install dependencies
-        working-directory: mobile
-        run: |
-          if [ ! -d "node_modules" ]; then
-            echo "Installing dependencies (cache miss)..."
-            npm ci --legacy-peer-deps
-          else
-            echo "Using cached node_modules ✅"
-          fi
-      
-      - name: 🔍 Check if native regen needed
-        id: native-check
-        working-directory: mobile
-        run: |
-          if [ "${{ github.event.inputs.force_clean }}" == "true" ]; then
-            echo "Force clean requested"
-            echo "needs_clean=true" >> $GITHUB_OUTPUT
-          elif [ ! -d "ios" ]; then
-            echo "iOS folder doesn't exist, needs generation"
-            echo "needs_clean=true" >> $GITHUB_OUTPUT
-          else
-            # Check if native-affecting files changed
-            if git diff HEAD~1 HEAD --quiet -- package.json app.json app.config.js 2>/dev/null; then
-              echo "No native config changes detected"
-              echo "needs_clean=false" >> $GITHUB_OUTPUT
-            else
-              echo "Native config changes detected"
-              echo "needs_clean=true" >> $GITHUB_OUTPUT
-            fi
-          fi
-      
-      - name: 🔧 Generate iOS project (conditional clean)
-        working-directory: mobile
-        run: |
-          if [ "${{ steps.native-check.outputs.needs_clean }}" == "true" ]; then
-            echo "Regenerating native code with --clean..."
-            npx expo prebuild --platform ios --clean --non-interactive
-          else
-            echo "Using cached native code, running prebuild without --clean..."
-            npx expo prebuild --platform ios --non-interactive || {
-              echo "Prebuild failed, falling back to clean..."
-              npx expo prebuild --platform ios --clean --non-interactive
-            }
-          fi
-          
-          # List generated iOS files for debugging
-          echo "Generated iOS files:"
-          ls -la ios/
-      
-      - name: 📦 Install CocoaPods dependencies
-        working-directory: mobile/ios
-        run: |
-          if [ ! -d "Pods" ]; then
-            echo "Installing CocoaPods (cache miss)..."
-            pod install
-          else
-            echo "Using cached Pods, updating if needed..."
-            pod install || pod repo update && pod install
-          fi
-          
-          # List workspace files after pod install
-          echo "iOS workspace files:"
-          ls -la
-      
-      - name: 🏗️ Build iOS app
-        working-directory: mobile/ios
-        run: |
-          # Find workspace file (it's a directory)
-          WORKSPACE=$(find . -maxdepth 1 -name "*.xcworkspace" -type d | head -n 1)
-          SCHEME=$(basename "$WORKSPACE" .xcworkspace)
-          
-          if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
-            CONFIG="Release"
-          else
-            CONFIG="Debug"
-          fi
-          
-          echo "Building workspace: $WORKSPACE"
-          echo "Scheme: $SCHEME"
-          
-          xcodebuild -workspace "$WORKSPACE" \
-            -scheme "$SCHEME" \
-            -configuration $CONFIG \
-            -sdk iphonesimulator \
-            -derivedDataPath ./build \
-            CODE_SIGNING_ALLOWED=NO \
-            CODE_SIGNING_REQUIRED=NO
-      
-      - name: 🔐 Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
-          aws-access-key-id: ${{ secrets.S3_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.S3_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      
-      - name: 📤 Upload iOS app to S3
-        run: |
-          # Get app version
-          VERSION=$(node -p "require('./app.json').expo.version")
-          
-          # Find .app file
-          APP_FILE=$(find ios/build/Build/Products -name "*.app" -type d | head -n 1)
-          
-          if [ -z "$APP_FILE" ]; then
-            echo "Error: No .app file found!"
-            exit 1
-          fi
-          
-          echo "Found app: $APP_FILE"
-          
-          # Zip the .app file (always "latest" name - S3 versioning handles history)
-          cd "$(dirname "$APP_FILE")"
-          ZIP_NAME="SalesX-latest.app.zip"
-          zip -r "$ZIP_NAME" "$(basename "$APP_FILE")"
-          
-          # Upload to S3 (overwrites previous - S3 versioning keeps history)
-          if [ "${{ github.event.inputs.build_type }}" == "release" ]; then
-            S3_KEY="mobile/ios/release/$ZIP_NAME"
-          else
-            S3_KEY="mobile/ios/debug/$ZIP_NAME"
-          fi
-          
-          aws s3 cp "$ZIP_NAME" "s3://salesx-greatify/$S3_KEY"
-          
-          # Generate CloudFront URL
-          S3_CLOUDFRONT_URL="${{ secrets.S3_CLOUDFRONT_URL }}/$S3_KEY"
-          
-          echo "IPA_VERSION=$VERSION" >> $GITHUB_ENV
-          echo "IPA_S3_KEY=$S3_KEY" >> $GITHUB_ENV
-          echo "IPA_DOWNLOAD_URL=$S3_CLOUDFRONT_URL" >> $GITHUB_ENV
-        working-directory: mobile
-      
-      - name: 📋 Build Summary
-        run: |
-          echo "### 🍎 iOS Build Complete! ✅" >> $GITHUB_STEP_SUMMARY
+          echo "⏱️ Build typically takes 10-15 minutes" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Branch:** ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Version:** ${{ env.IPA_VERSION }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Build Type:** ${{ github.event.inputs.build_type }}" >> $GITHUB_STEP_SUMMARY
+          echo "### 📥 Installation" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### 📥 Download iOS App" >> $GITHUB_STEP_SUMMARY
+          echo "Once build completes, users can install from the EAS build page." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Direct Download Link:**" >> $GITHUB_STEP_SUMMARY
-          echo "${{ env.IPA_DOWNLOAD_URL }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**S3 Location:** \`${{ env.IPA_S3_KEY }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "⚠️ **Note:** Simulator build only (no code signing)" >> $GITHUB_STEP_SUMMARY
+          echo "**Distribution:**" >> $GITHUB_STEP_SUMMARY
+          echo "- Android: Direct APK download" >> $GITHUB_STEP_SUMMARY
+          echo "- iOS: OTA installation (requires Apple Developer account)" >> $GITHUB_STEP_SUMMARY
